<resources>
    <string name="app_name">Near space</string>
    <string name="search_wiki">Search Wikipedia</string>
    <string name="wiki_helper_text">Find any incomprehensible word.</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="before_yesterday">Before yesterday</string>
    <string name="theme_default">Default</string>
    <string name="martian">Martian</string>
    <string name="choice_the_theme_of_app">Choice the theme of app</string>
    <string name="add">add</string>
    <string name="mars">Mars</string>
    <string name="earth">Earth</string>
    <string name="weather_of_space">Weather of space</string>
    <string name="photo_of_day">Photo of day</string>
    <string name="more">more</string>
    <string name="notes">Notes</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="text_of_note">text of note</string>
    <string name="apply">apply</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Editing the note</string>
    <string name="move_down">move down</string>
    <string name="move_up">move up</string>
    <string name="no_description">no description</string>
    <string name="drag_handler">drag handler</string>
</resources>